Fix layout issues with laptop and mobile sizes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,9 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	padding: 6rem;
-	min-height: 100vh;
+	/* padding: 6rem; */
+	min-height: 50vh;
+	margin: 0 auto;
 }
 
 .description {
